force-app/main/default/objects/Students__c/Students__c.object-meta.xml
<CustomObject>
    <label>Student</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>