force-app/main/default/objects/Students__c/fields/CEO_s_Email__c.field-meta.xml
<CustomField>
    <fullName>CEO_s_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CEO&apos;s Email</label>
    <type>Email</type>
</CustomField>