force-app/main/default/objects/Students__c/fields/Manager_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager&apos;s Email</label>
    <type>Email</type>
</CustomField>