force-app/main/default/objects/Students__c/fields/Roll_No__c.field-meta.xml
<CustomField>
    <fullName>Roll_No__c</fullName>
    <displayFormat>USN - {0000000}</displayFormat>
    <label>Roll No</label>
    <type>AutoNumber</type>
</CustomField>