force-app/main/default/objects/Students__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <length>255</length>
    <referenceTo>Sharat_Sushma_Student_c__x</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>ExternalLookup</type>
</CustomField>