force-app/main/default/objects/Students__c/fields/Total_Books__c.field-meta.xml
<CustomField>
    <fullName>Total_Books__c</fullName>
    <label>Total Books</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>