force-app/main/default/objects/Students__c/recordTypes/Faculty.recordType-meta.xml
<RecordType>
    <fullName>Faculty</fullName>
    <active>true</active>
    <label>Faculty</label>
</RecordType>