force-app/main/default/objects/Students__c/listViews/que_Students.listView-meta.xml
<ListView>
    <fullName>que_Students</fullName>
    <filterScope>Queue</filterScope>
    <label>Display</label>
    <queue>que</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>